--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
   implementation 'org.apache.tika:tika-core:3.2.3'
+  implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:4.0.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	compileOnly 'org.projectlombok:lombok'
@@ -58,6 +59,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 	systemProperty "file.encoding", "UTF-8"
+	systemProperty "aws.region", "ap-northeast-2"
 }
 
 bootRun {
