--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,22 +13,20 @@ spring:
       max-file-size: 10MB          # 최대 파일 크기
       max-request-size: 50MB       # 최대 요청 크기
       file-size-threshold: 1MB     # 메모리에 저장될 임계 크기
-  # 파일 업로드 설정 - `s3`
+  # 파일 업로드 설정 - `s3` - 사용하지 않는다면 무시
   cloud:
     aws:
       region:
         static: ap-northeast-2    # region
       credentials:
-        access-key: YOUR_KEY
-        secret-key: YOUR_SECRET
+        # 환경별 시스템 프로퍼티(-Dspring.cloud.aws.credentials.access-key 등)로 주입
+        access-key: YOUR_LOCAL_ACCESS_KEY
+        secret-key: YOUR_LOCAL_SECRET_KEY
       s3:
-        bucket: YOUR_BUCKET
-        folder: YOUR_FOLDER
-        domain: YOUR_DOMAIN  # s3 or cloudfront domain
-  # 파일 업로드 설정 - `local`
-  local:
-    upload:
-      path: ${user.home}/vision/upload
+        # 환경별 시스템 프로퍼티(-Dspring.cloud.aws.s3.bucket 등)로 주입
+        bucket: YOUR_LOCAL_BUCKET
+        folder: YOUR_LOCAL_FOLDER
+        domain: YOUR_LOCAL_DOMAIN  # s3 or cloudfront domain
   jpa:
     hibernate:
       ddl-auto: update
@@ -36,3 +34,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+# JWT 설정
+jwt:
+  # 환경별 시스템 프로퍼티(-Djwt.secret)로 주입
+  secret: v-api-secret-key-for-local-development-only-2026
+  access-token-validity: 3600000        # 1시간
+  refresh-token-validity: 86400000      # 24시간
