✦ feat: 스토리지 저장 방식(Local/S3) 선택 설정 추가 및 UserEntity 리프레시 토큰 길이 확장

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,3 +41,11 @@ jwt:
   secret: v-api-secret-key-for-local-development-only-2026
   access-token-validity: 3600000        # 1시간
   refresh-token-validity: 86400000      # 24시간
+
+# 애플리케이션 커스텀 설정
+app:
+  storage:
+    local:
+      enabled: true
+    s3:
+      enabled: false
