--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -19,7 +19,7 @@ app:
     local:
       enabled: true
     s3:
-      enabled: false
+      enabled: true
   # 테스트 실행 시 임시 디렉토리를 사용하도록 설정
   upload:
     path: ${java.io.tmpdir}/vision-test-uploads
